--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <h1> My first app</h1>
 <employee-list></employee-list>
 <app-employees-face></app-employees-face>
+<app-projectlist></app-projectlist>
+
