--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,4 @@
 <employee-list></employee-list>
 <app-employees-face></app-employees-face>
 <app-projectlist></app-projectlist>
-
+<app-employee-form></app-employee-form>
