feat: separate page for a list of employees

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<app-employee-form></app-employee-form>
-<employee-list></employee-list>
+<app-home></app-home>
+<router-outlet></router-outlet>
 
 
 
