--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,31 @@
-<app-home></app-home>
+
+  <nav class="navbar navbar-expand-lg navbar-secondary bg-secondary" style="padding: 10px">
+  <a class="navbar-brand" href="#">Super App</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="/">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="list">List</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="create-employee">Form</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
 <router-outlet></router-outlet>
 
+<footer>
+  <div class= "text-center p-4 fixed-bottom" style="background-color: rgba(0, 0, 0, 0.05);">
+    © Super App 2022:
+    <a class="text-reset fw-bold" href="https://mdbootstrap.com/">https://github.com/WeronikaKornek</a>
+  </div>
+</footer>
 
 
