--- a/src/app/ui/employee-list/employee-list.component.html
+++ b/src/app/ui/employee-list/employee-list.component.html
@@ -1,9 +1,12 @@
 
 <div class="container" style="margin-top:30px">
   <h1>Employee list</h1>
+
 <ul class="list-group" *ngIf="data$ | async as data">
   <li class="list-group-item" *ngFor="let employee of data">
-
-    {{ employee.personalNumber }} {{ employee.name }} {{employee.mail}} <button class="btn btn-primary" (click)="remove(employee.personalNumber)">Remove me</button></li>
+    <a routerLink="/employee-details/{{ employee.personalNumber }}/{{ employee.name }}" >
+      {{ employee.personalNumber }} {{ employee.name }}
+    </a>
+      <button class="btn btn-primary" (click)="remove(employee.personalNumber)">Remove me</button></li>
 </ul>
 </div>
