feat:  details page

--- a/src/app/ui/employee-list/employee-list.component.html
+++ b/src/app/ui/employee-list/employee-list.component.html
@@ -4,7 +4,7 @@
 
 <ul class="list-group" *ngIf="data$ | async as data">
   <li class="list-group-item" *ngFor="let employee of data">
-    <a routerLink="/employee-details/{{ employee.personalNumber }}/{{ employee.name }}" >
+    <a routerLink="/employee-details/{{ employee.personalNumber }}" >
       {{ employee.personalNumber }} {{ employee.name }}
     </a>
       <button class="btn btn-primary" (click)="remove(employee.personalNumber)">Remove me</button></li>
