--- a/src/app/ui/employee-details/employee-details.component.html
+++ b/src/app/ui/employee-details/employee-details.component.html
@@ -1,6 +1,7 @@
-<div class="container" style="margin-top:40px;">
 
-  <h1>Employee </h1>
-id: {{(params$ | async)?.id}} <br>
-name: {{(params$ | async)?.name}}
+  <div class="card" style="margin:40px;">
+  <div class="card-body">
+  id: {{(details$ | async)?.personalNumber}} <br>
+name: {{(details$ | async)?.name}}
+  </div>
 </div>
